@@ -446,7 +446,7 @@ grub_ieee1275_encode_devname (const char *path)
 	/* GRUB partition 1 is OF partition 0.  */
 	partno++;
 
-      encoding = grub_xasprintf ("%s,%d", device, partno);
+      encoding = grub_xasprintf ("ieee1275/%s,%d", device, partno);
     }
   else
     encoding = grub_strdup (device);
